# noesis_runtime

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  LIMITATIONS.md  README.md  RELEASING.md  SDK_LIMITATIONS.md  TODO.md  build.rs  release.toml
.claude/skills/prune-comments/: SKILL.md
.github/workflows/: ci.yml  release.yml
cpp/: noesis_animation.cpp  noesis_binding.cpp  noesis_brushes.cpp  noesis_classes.cpp  noesis_collections.cpp  noesis_commands.cpp  noesis_controls.cpp  noesis_diagnostics.cpp  noesis_drawing.cpp  noesis_element_tree.cpp  noesis_events.cpp  noesis_font_provider.cpp  noesis_formatted_text.cpp  noesis_geometry.cpp  noesis_imaging.cpp  noesis_input.cpp  noesis_integration.cpp  noesis_markup.cpp  noesis_mesh.cpp  noesis_plain_vm.cpp  noesis_reflection_meta.cpp  noesis_render_device.cpp  noesis_resources.cpp  noesis_shapes.cpp  noesis_shim.cpp  noesis_shim.h  noesis_svg.cpp  noesis_text_inlines.cpp  noesis_texture_provider.cpp  noesis_typography.cpp  noesis_view.cpp  noesis_visual_state.cpp  noesis_xaml.cpp
docs/: PHASE_1_PLAN.md
scripts/git-hooks/: commit-msg  pre-push
src/: animation.rs  binding.rs  brushes.rs  classes.rs  collection_view.rs  commands.rs  converters.rs  diagnostics.rs  drawing.rs  element_tree.rs  events.rs  ffi.rs  font_provider.rs  formatted_text.rs  geometry.rs  gui.rs  imaging.rs  input.rs  integration.rs  lib.rs  markup.rs  mesh.rs  multi_binding.rs  name_scope.rs  panic_guard.rs  plain_vm.rs  reflection.rs  resources.rs  shapes.rs  styles.rs  svg.rs  text_inlines.rs  texture_provider.rs  transforms.rs  typography.rs  view.rs  xaml.rs  xaml_provider.rs
src/render_device/: device.rs  ffi.rs  mod.rs  types.rs  vtable.rs
tests/: animation_begin_on.rs  animation_color.rs  animation_controllable.rs  animation_double.rs  animation_easing.rs  animation_keyframe.rs  animation_keyframe_types.rs  animation_value_types.rs  binding.rs  binding_clear.rs  binding_expression.rs  binding_extras.rs  binding_find_ancestor.rs  brushes_transforms.rs  builder_animation.rs  builder_brushes_effects.rs  builder_geometry.rs  builder_style.rs  classes.rs  collection_view.rs  commands.rs  controls_props.rs  controls_s8_remainder.rs  controls_scroll.rs  controls_selection.rs  cross_dict_static_resource.rs  custom_attached.rs  custom_bases.rs  custom_dp_coerce_point.rs  custom_dp_metadata.rs  custom_dp_readonly_value_types.rs  custom_dp_reentrant_change.rs  custom_dp_string_default.rs  custom_dp_value_type_callbacks.rs  custom_dp_value_types.rs  custom_freezable.rs  custom_layout.rs  datacontext_u64.rs  dependency_extras.rs  dependency_property.rs  (+72 more)
